# emulador-chip8

./: .gitignore  CMakeLists.txt  README.md  chip8.cpp  chip8.h  cpu.cpp  cpu.h  emulador-chip8.sln  emulador-chip8.vcxproj  emulador-chip8.vcxproj.filters  emulator.cpp  emulator.h  gpu.cpp  gpu.h  index.data  index.html  index.js  index.wasm  main.cpp  main.h  memory.cpp  memory.h
enc_temp_folder/c791eb391ba34cd3c1366aab0147bb/: main.cpp
src/: cpu.cpp  cpu.h  emulator.cpp  emulator.h  gpu.cpp  main.cpp  main.h  memory.h
