cmake_minimum_required(VERSION 3.22.1)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED 20)
project("Emulador Chip-8")
find_package(SDL2 REQUIRED)
add_executable(emulator src/main.cpp src/emulator.cpp src/cpu.cpp src/memory.cpp src/gpu.cpp)
target_include_directories(emulator PRIVATE ${SDL2_INCLUDE_DIRS})
target_link_libraries(emulator PRIVATE ${SDL2_LIBRARIES} /usr/lib/x86_64-linux-gnu/libSDL2_mixer.so /usr/lib/x86_64-linux-gnu/libSDL2_ttf.so)
set(CMAKE_BUILD_TYPE Release)